Removing non existing tag from pom
Former-commit-id: eddca7109234170e4dc306cf05c99769e00b4b1f