@@ -667,7 +667,6 @@
                 </executions>
                 <configuration>
                     <mainClass>mediathek.Main</mainClass>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
